# libjingle

./: .gitignore  .gitmodules  .testfile  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  LICENSE_THIRD_PARTY  README  README.md
base/: CMakeLists.txt  asyncfile.cc  asyncfile.h  asynchttprequest.cc  asynchttprequest.h  asynchttprequest_unittest.cc  asyncpacketsocket.h  asyncsocket.cc  asyncsocket.h  asynctcpsocket.cc  asynctcpsocket.h  asynctcpsocket_unittest.cc  asyncudpsocket.cc  asyncudpsocket.h  asyncudpsocket_unittest.cc  atomicops.h  atomicops_unittest.cc  autodetectproxy.cc  autodetectproxy.h  autodetectproxy_unittest.cc  bandwidthsmoother.cc  bandwidthsmoother.h  bandwidthsmoother_unittest.cc  base64.cc  base64_unittest.cc  basictypes.h  basictypes_unittest.cc  bind_unittest.cc  buffer.h  buffer_unittest.cc  bytebuffer.cc  bytebuffer.h  bytebuffer_unittest.cc  byteorder.h  byteorder_unittest.cc  checks.cc  common.cc  common.h  cpumonitor.cc  cpumonitor.h  (+282 more)
engine/: CMakeLists.txt
engine/p2p/base/: asyncstuntcpsocket.cc  asyncstuntcpsocket.h  asyncstuntcpsocket_unittest.cc  basicpacketsocketfactory.cc  basicpacketsocketfactory.h  candidate.h  common.h  constants.cc  dtlstransport.h  dtlstransportchannel.cc  dtlstransportchannel.h  dtlstransportchannel_unittest.cc  fakesession.h  p2ptransport.cc  p2ptransport.h  p2ptransportchannel.cc  p2ptransportchannel.h  packetsocketfactory.h  parsing.cc  port.cc  port.h  port_unittest.cc  portallocator.cc  portallocator.h  portallocatorsessionproxy.cc  portallocatorsessionproxy.h  portallocatorsessionproxy_unittest.cc  portinterface.h  portproxy.cc  portproxy.h  pseudotcp.cc  pseudotcp.h  pseudotcp_unittest.cc  rawtransport.cc  rawtransport.h  rawtransportchannel.cc  rawtransportchannel.h  relayport.cc  relayport.h  relayserver.cc  (+47 more)
engine/p2p/client/: autoportallocator.h  basicportallocator.cc  basicportallocator.h  connectivitychecker.cc  connectivitychecker.h  connectivitychecker_unittest.cc  fakeportallocator.h  httpportallocator.cc  httpportallocator.h  sessionmanagertask.h  sessionsendtask.h  socketmonitor.cc  (+1 more)
engine/test/: hangoutpubsubclient_unittest.cc  mucroomlookuptask_unittest.cc  mucroomuniquehangoutidtask_unittest.cc  p2ptransportchannel_unittest.cc  portallocator_unittest.cc  pubsubclient_unittest.cc  relayport_unittest.cc  rostermodule_unittest.cc  session_unittest.cc  stun_unittest.cc  stunserver_unittest.cc  transport_unittest.cc  util_unittest.cc  util_unittest.h  xmppengine_unittest.cc  xmpplogintask_unittest.cc  xmppstanzaparser_unittest.cc
engine/xmpp/: asyncsocket.h  chatroommodule.h  chatroommoduleimpl.cc  constants.cc  constants.h  discoitemsquerytask.cc  discoitemsquerytask.h  fakexmppclient.h  hangoutpubsubclient.cc  hangoutpubsubclient.h  iqtask.cc  iqtask.h  jid.cc  jid_unittest.cc  jingleinfotask.cc  jingleinfotask.h  moduleimpl.cc  moduleimpl.h  mucroomconfigtask.cc  mucroomconfigtask.h  mucroomconfigtask_unittest.cc  mucroomdiscoverytask.cc  mucroomdiscoverytask.h  mucroomdiscoverytask_unittest.cc  mucroomlookuptask.cc  mucroomlookuptask.h  mucroomuniquehangoutidtask.cc  mucroomuniquehangoutidtask.h  pingtask.cc  pingtask.h  pingtask_unittest.cc  plainsaslhandler.h  presenceouttask.cc  presenceouttask.h  presencereceivetask.cc  presencereceivetask.h  presencestatus.cc  presencestatus.h  prexmppauth.h  pubsub_task.cc  (+37 more)
src/: CMakeLists.txt  Formula.cpp  Formula.h  asyncfile.cc  asynchttprequest.cc  asyncsocket.cc  asyncsocket.h  asyncudpsocket.cc  autodetectproxy.cc  autodetectproxy.h  bytebuffer.cc  bytebuffer.h  byteorder.h  common.h  crc32.h  criticalsection.h  cryptstring.h  diskcache.cc  event.cc  event.h  filelock.cc  fileutils.cc  fileutils.h  flags.h  helpers.h  httpbase.h  httpcommon-inl.h  ipaddress.cc  ipaddress.h  linux.cc  linuxwindowpicker.cc  logging.cc  logging.h  main.cpp  messagehandler.h  messagequeue.cc  nethelpers.cc  network.h  openssladapter.h  pathutils.cc  (+29 more)
test/: CMakeLists.txt  Formula-test.cpp  autodetectproxy_unittest.cc  bandwidthsmoother_unittest.cc  base64_unittest.cc  basictypes_unittest.cc  bind_unittest.cc  bytebuffer_unittest.cc  byteorder_unittest.cc  crc32_unittest.cc  event_unittest.cc  fileutils_unittest.cc  helpers_unittest.cc  host_unittest.cc  httpserver_unittest.cc  ipaddress_unittest.cc  linux_unittest.cc  linuxfdwalk_unittest.cc  network_unittest.cc  optionsfile_unittest.cc  pathutils_unittest.cc  ratelimiter_unittest.cc  signalthread_unittest.cc  sigslot_unittest.cc  socket_unittest.cc  socket_unittest.h  socketaddress_unittest.cc  stream_unittest.cc  stringencode_unittest.cc  systeminfo_unittest.cc  task_unittest.cc  versionparsing_unittest.cc  virtualsocket_unittest.cc
test/base/: CMakeLists.txt  asynctcpsocket_unittest.cc  asyncudpsocket_unittest.cc  atomicops_unittest.cc  buffer_unittest.cc  cpumonitor_unittest.cc  filelock_unittest.cc  gunit.h  httpbase_unittest.cc  json_unittest.cc  linuxwindowpicker_unittest.cc  sslidentity_unittest.cc  sslstreamadapter_unittest.cc  stringutils_unittest.cc  testclient_unittest.cc  timeutils_unittest.cc  unittest_main.cc  windowpicker_unittest.cc
test/p2p/: p2ptransportchannel_unittest.cc  pseudotcp_unittest.cc
test/xmllite/: CMakeLists.txt  qname_unittest.cc  xmlbuilder_unittest.cc  xmlelement_unittest.cc  xmlnsstack_unittest.cc  xmlparser_unittest.cc  xmlprinter_unittest.cc
test/xmpp/: CMakeLists.txt  hangoutpubsubclient_unittest.cc  jid_unittest.cc  mucroomconfigtask_unittest.cc  mucroomdiscoverytask_unittest.cc  mucroomlookuptask_unittest.cc  mucroomuniquehangoutidtask_unittest.cc  pingtask_unittest.cc  pubsubclient_unittest.cc  pubsubtasks_unittest.cc  rostermodule_unittest.cc  util_unittest.cc  xmppengine_unittest.cc  xmpplogintask_unittest.cc  xmppstanzaparser_unittest.cc
xmllite/: CMakeLists.txt  qname.cc  qname_unittest.cc  xmlbuilder.cc  xmlbuilder.h  xmlbuilder_unittest.cc  xmlconstants.cc  xmlconstants.h  xmlelement.cc  xmlelement.h  xmlelement_unittest.cc  xmlnsstack.cc  xmlnsstack.h  xmlnsstack_unittest.cc  xmlparser.cc  xmlparser.h  xmlparser_unittest.cc  xmlprinter.cc  xmlprinter_unittest.cc
(+1149 files in other folders)
