cmake_minimum_required(VERSION 3.5.1)
project(libjigle)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "-pthread -lssl -lcrypto -lX11")
add_definitions(-DPOSIX=5 -DHAVE_OPENSSL_SSL_H=1 -DLINUX=1 -DUSE_SSLSTREAM)

include_directories(base expat/expat xmllite xmpp xmpp/p2p .)

add_subdirectory(expat/expat)
add_subdirectory(googletest)
add_subdirectory(base)
add_subdirectory(xmllite)
add_subdirectory(xmpp)
# add_subdirectory(test/base)
# add_subdirectory(test/xmllite)
add_subdirectory(test/xmpp)